# entity_component_factory

./: .gitignore  CMakeLists.txt  README.md
include/: component.h  dispatcher.h  entity.h  entity_event.h  entity_manager.h  factory.h  type_util.h
test/: component_test.cpp  factory_test.cpp
